--- a/index.html
+++ b/index.html
@@ -228,8 +228,7 @@
 
             <div class="p-t-b-15">
               <!-- Headline & Description -->
-              <h1>Bem-estar, longevidade e performance:<br>
-                A saúde dos seus sonhos através da endocrinologia
+              <h1>Bem-estar e longevidade através dos nossos<br> cuidados endocrinológicos personalizados
                 </h1>
 
               <h3>Consultas especializadas, acompanhamento contínuo e suporte educacional <br>para uma saúde endocrinológica completa.<br>
@@ -286,17 +285,18 @@
 
               <!-- Headline -->
               <div class="wrap-line border-dark">
-                <h3 style="color:#4E2D18"><span class="font-weight-200">Sobre</span> nós</h3>
+                <h3 style="color:#77ccb1"><strong class="font-weight-500">Sobre nós</h3></strong>
               </div>
               <!-- /End Headline -->
 
               <!-- Description -->
               <div class="p-t-b-15  text-grey">
-                <p>Na Perforlive, transformamos vidas através de cuidados endocrinológicos personalizados, promovendo bem-estar, longevidade e performance. Acreditamos que uma saúde equilibrada é a chave para uma vida plena, e empoderamos nossos pacientes com ferramentas e conhecimentos para alcançar seus objetivos de saúde e bem-estar. <br><br>
+                <p>Na Perforlive, transformamos vidas através de <strong>cuidados endocrinológicos personalizados</strong>, promovendo bem-estar, longevidade e performance. Acreditamos que uma saúde endocrinológica equilibrada é a chave para uma vida plena, <strong>impactando positivamente</strong> áreas como energia, disposição, estética, e qualidade do sono. Empoderamos nossos pacientes com ferramentas e conhecimentos para alcançar seus objetivos de saúde e bem-estar.
+                  <br><br>
                   
-                  Nosso atendimento é integrado e colaborativo, envolvendo nutricionistas e treinadores para um cuidado completo e eficaz. Oferecemos consultas especializadas, pacotes de acompanhamento prolongado e suporte educacional contínuo. Valorizamos a comunicação clara e acessível, criando um ambiente acolhedor onde nossos pacientes se sentem confortáveis e valorizados.<br><br>
+                  Nosso atendimento é integrado e colaborativo, envolvendo <strong>nutricionistas e treinadores</strong> para um cuidado completo e eficaz. Oferecemos <strong>consultas especializadas, pacotes de acompanhamento prolongado e suporte educacional contínuo</strong>. Valorizamos a comunicação clara e acessível, criando um ambiente acolhedor onde nossos pacientes se sentem confortáveis e valorizados.
                   
-                  Estamos aqui para transformar sua saúde e sua vida.</p>
+                  </p>
               </div>
               <!-- /End Description -->
 
@@ -317,9 +317,9 @@
           <div class="gallery row no-gutters p-t-b-30">
              <!-- Image 3 -->
              <figure class="col-xs-6 img-hover-effect">
-              <a href="images/longevidade.jpg"
+              <a href="images/longevidade.png"
                  data-size="900x600">
-                <img class="img-responsive" src="images/longevidade.jpg"
+                <img class="img-responsive" src="images/longevidade.png"
                      alt="Image description"/>
               </a>
 
@@ -331,9 +331,9 @@
 
             <!-- Image 4 -->
             <figure class="col-xs-6 img-hover-effect">
-              <a href="images/estetica.jpg"
+              <a href="images/estetica.png"
                  data-size="900x600">
-                <img class="img-responsive" src="images/estetica.jpg"
+                <img class="img-responsive" src="images/estetica.png"
                      alt="Image description"/>
               </a>
               <span class="img-title">Estética</span>
@@ -344,9 +344,9 @@
 
             <!-- Image 1 -->
             <figure class="col-xs-6 img-hover-effect">
-              <a href="images/reposicao.jpg"
+              <a href="images/reposicao.png"
                  data-size="900x600">
-                <img class="img-responsive" src="images/reposicao.jpg"
+                <img class="img-responsive" src="images/reposicao.png"
                      alt="Image description"/>
               </a>
 
@@ -358,9 +358,9 @@
 
             <!-- Image 2 -->
             <figure class="col-xs-6 img-hover-effect">
-              <a href="images/vida.jpg"
+              <a href="images/vida.png"
                  data-size="900x600">
-                <img class="img-responsive" src="images/vida.jpg"
+                <img class="img-responsive" src="images/vida.png"
                      alt="Image description"/>
               </a>
 
