ajustes no tamanho da imagem

--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
           <div class="gallery row no-gutters p-t-b-30">
              <!-- Image 3 -->
              <figure class="col-xs-6 img-hover-effect">
-              <a href="images/longevidade.png"
+              <a href="images/longevidade.jpg"
                  data-size="900x600">
-                <img class="img-responsive" src="images/longevidade.png"
+                <img class="img-responsive" src="images/longevidade.jpg"
                      alt="Image description"/>
               </a>
 
@@ -331,9 +331,9 @@
 
             <!-- Image 4 -->
             <figure class="col-xs-6 img-hover-effect">
-              <a href="images/estetica.png"
+              <a href="images/estetica.jpg"
                  data-size="900x600">
-                <img class="img-responsive" src="images/estetica.png"
+                <img class="img-responsive" src="images/estetica.jpg"
                      alt="Image description"/>
               </a>
               <span class="img-title">Estética</span>
@@ -344,9 +344,9 @@
 
             <!-- Image 1 -->
             <figure class="col-xs-6 img-hover-effect">
-              <a href="images/reposicao.png"
+              <a href="images/reposicao.jpg"
                  data-size="900x600">
-                <img class="img-responsive" src="images/reposicao.png"
+                <img class="img-responsive" src="images/reposicao.jpg"
                      alt="Image description"/>
               </a>
 
@@ -358,9 +358,9 @@
 
             <!-- Image 2 -->
             <figure class="col-xs-6 img-hover-effect">
-              <a href="images/vida.png"
+              <a href="images/vida.jpg"
                  data-size="900x600">
-                <img class="img-responsive" src="images/vida.png"
+                <img class="img-responsive" src="images/vida.jpg"
                      alt="Image description"/>
               </a>
 
