--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="p-t-b-30">
               <p>
                 
-                <a href="https://instagram.com/" target="_blank" class="link-white"><i
+                <a href="https://www.instagram.com/perforlive/" target="_blank" class="link-white"><i
                     class="fa fa-instagram"></i></a>               
               </p>
             </div>
@@ -304,7 +304,7 @@
               <div class="p-t-b-15">
                 <p>
                                   
-                  <a href="https://instagram.com/" target="_blank">
+                  <a href="https://www.instagram.com/perforlive/" target="_blank">
                     <i class="fa fa-instagram"></i></a>
                 </p>
               </div>
@@ -459,8 +459,8 @@
                     <h4>Endereço</h4>
 
                     <p>
-                      Rua Jaceru, 384 - Conjunto 1410
-                      Brooklin, São Paulo/SP
+                      Rua Gomes de Carvalho 1356 CJ 51 E 52 - Vila Olimpia
+São Paulo - 04547005
                       </p>
                   </div>
                   <!-- /End Address -->
